dashboard/static/dashboard/css/style.css
.covidology-logo{
  height: 65px;
  /* width: 220px; */
  padding-left: 25px
}

/* .container{
  display: inline-block;
} */

.top-line{
  width: auto;
}

.top-font{
  font-family: "Montserrat",sans-serif;
  color: white;
}

.jumbotron{
  background-color: #2d3142;
  border-radius: 25px;
}

.jumbotron-fluid{
  border-radius: 25px;
}

.counter{
  padding-top: 5%;
  font-family: "Montserrat",sans-serif;
  font-size: 2.5rem;
  text-align: center;
  font-weight: 500;
}


.counterB{
  padding-top: 5%;
  font-family: "Montserrat",sans-serif;
  font-size: 2.5rem;
  text-align: center;
  font-weight: 600;

}

.boxed-font{
  font-family: "Raleway",sans-serif;
  color: white;
}

.navbar-dark{
  background-color: #2d3142;
}

.navbar-text{
  font-family: "Raleway",sans-serif;
  font-size: 1.75rem;
  padding-left: 1rem;
}

.navbar-text:hover{
  color: #a7ecc1;
}

.map-text{
  text-align: center;
}

/*Overflow: Allows our scroll boundary to be linked */

/* 'nowrap' allows the entire row to remain as a row without
   'wrapping' to the next row
*/

/* Perspective: Entire segment */


.scroll-counter-data > .row {
  overflow-x:hidden;
  flex-wrap: nowrap;
  display: flex;
}



.scroll-counter-data > .row > .col-lg-4{
  flex: 0 0 auto;
  float: none;
  position: relative;
}

/* .scroll-counter-data > .row > .col-lg-4:hover{
    border: 2px solid #FFFFFF;
} */

.scroll-action{
  animation-name: move;
  animation-duration: 40s;
  animation-timing-function: linear;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-delay: 2.5s;
  background-repeat: round;
}

.map-separator{
  border-radius:150px;
  text-align: center;

}

.scroll-separator{
  /* border-radius:150px; */
  text-align: center;
  color:#2d3142;

}

.twitter-data{
  /* background-color: white; */
  height: 28%;
}


html,body{
  /* background: rgb(148,232,180); */
  background: linear-gradient(270deg, rgba(148,232,180,1) 0%,
              rgba(127,226,174,1) 15%,
              rgba(141,230,178,1) 23%,
              rgba(115,222,170,1) 46%,
              rgba(58,203,153,1) 85%,
              rgba(48,200,150,1) 91%,
              rgba(9,188,138,1) 100%);
  height: 100%;
  width: 100%;
  overflow-x: hidden;
}

hr{
  width: 300px;
  border-top: 2.5px #080808 solid;
  border-bottom: 1.5px rgba(0, 0, 0, 0.25) solid;
}


hr.in-box-line{
  border-top: 2.5px #f8f8f8 solid;
  border-bottom: 1.5px rgba(0, 0, 0, 0.25) solid;
}

/* i:hover{
  color: #09bc8a;
} */

@keyframes move {
  from {left: 0;}
  to {left: -4950px;}
  /* 100% {left: 0;} */
}

/* @keyframes moveback {
  from {left: -4400px;}
  to {left: 0px;}
} */


/* Perspective: Each individual counter  */

